# gusni

./: .gitignore  Cargo.toml  eye.json  rpzsudo  scene.json
examples/: demo.rs  scene.json
src/: algebra.rs  beam.rs  lib.rs  material.rs  primitive.rs  ray.rs  sample.rs  scene.rs
src/core/: buffer.rs  mod.rs  ray.rs  scene.rs  wave.rs
src/geometry/: mod.rs  primitive.rs  ray.rs  scene.rs
src/light/: beam.rs  color.rs  material.rs  mod.rs
src/tree/: mod.rs  primitive.rs
