[package]
name = "gusni"
version = "0.1.0"
edition = "2018"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.num]
version = "0.2"

[dependencies.generic-array]
version = "0.13"
features = ["serde"]

[dependencies.rand]
version = "0.7"

[dev-dependencies.bincode]
version = "1.2"
