[package]
name = "gusni"
version = "0.1.0"
edition = "2018"

[lib]
name = "gusni"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/bin/app/main.rs"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.num]
version = "0.4"

[dependencies.rand]
version = "0.8"

[dev-dependencies.bincode]
version = "1.3"

[dependencies.serde_json]
version = "1.0"
